Closing internals post jamm upgrade